# todo_list_app

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
app/: settings.py  urls.py
app/settings/: base.py  dev.py  test.py
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py
tests/integration_tests/: test_graphql_tasks_api.py  test_tasks_api.py
tests/unit_tests/: test_admin.py  test_models.py
todolist/: serializers.py  urls.py  views.py
todolist/graphql/: schema.py  types.py
