[project]
name = "todo-list-app"
version = "0.1.0"
description = ""
authors = [
    {name = "alelles16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "strawberry-graphql-django (>=0.58.0,<0.59.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
pytest-django = "^4.11.1"
pytest-cov = "^6.1.1"
